# OpenDAW

./: AudioCore.c  AudioError.c  CMakeLists.txt  Common.c  DawUI.cpp  LICENSE  Midi.cpp  README.md  apple_plaform.mm  gui.cpp  main.cpp  projectfile.c  vst.c
OpenDAWLib/: CMakeLists.txt  Cargo.toml  build.sh
OpenDAWLib/src/: cd.rs  lib.rs
Xcode/OpenDAW/: audiocore.h  audiocore.m  mac_audiocore.c  mac_audiocore.h  main.cpp  main.m
Xcode/OpenDAW.xcodeproj/: project.pbxproj
Xcode/OpenDAW.xcodeproj/project.xcworkspace/xcuserdata/andrewskatzes.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/OpenDAW.xcodeproj/xcuserdata/andrewskatzes.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/OpenDAW.xcodeproj/xcuserdata/andrewskatzes.xcuserdatad/xcschemes/: xcschememanagement.plist
Xcode/OpenDAW/Assets.xcassets/AppIcon.appiconset/: Contents.json
assets/: create_icon_mac.py  create_icon_win.py  opendaw_icon.ai
assets/OpenDAW.ico/: create.py
cmake/: Findmp3lame.cmake  Findmpg123.cmake  SndFileChecks.cmake  rtmidi-config.cmake.in
cmake/sqlite/: FindSQLite3.cmake
docs/: github.md  gnustep-installation.md  rust-basic.md
headers/: AudioCore.h  AudioError.h  CD.h  Common.h  DawUI.hpp  Midi.h  Midi.hpp  config.h  gui.hpp  projectfile.h  rustlib.h  vst.h
headers/apple/: apple_platform.h
headers/libc/: cstdint.c  cstdint.h  cstdio.c  cstdio.h
rust/OpenDAW/: Cargo.toml
rust/src/: cd.rs  main.rs
unstable/MacOS/: AudioCore.swift
unstable/MacOS/objective_c/: AudioCore.h  AudioCore.m  main.m
